# wattif

./: .gitignore  README.md  ev_chargers_islington_city_centre_west.csv  ev_chargers_islington_city_centre_west.xlsx  ev_owner_feedback_islington_city_centre_west.csv  package-lock.json  testing1.csv  testing1.xlsx
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  cohort_context.py  concern_recommendations.py  config.py  dataset_context.py  dataset_ingest.py  evidence_retrieval.py  existing_infra_context.py  main.py  ml_bridge.py  models.py  optimizer.py  persistence_models.py  planner.py  planner_copilot.py  planner_dispatch.py  planner_events.py  planner_intent.py  planner_simple_placement.py  planner_tool_parse.py  report_generator.py  scenarios.py  state.py  synthetic_resident_reactions.py
backend/app/data/: __init__.py  concern_generator.py  dataset_classify.py  dataset_parse.py  evidence_extract.py  infra_extract.py  loader.py  seed.py  toronto.py
backend/app/db/: __init__.py  (+1 more)
backend/tests/: conftest.py  test_cohorts.py  test_concern_recommendations.py  test_dataset_ingest.py  test_datasets.py  test_edge.py  test_evidence_extract.py  test_evidence_retrieval.py  test_forecast.py  test_infra_extract.py  test_llm.py  test_optimizer.py  test_persistence.py  test_planner.py  test_planner_copilot.py  test_planner_event_lifecycle.py  test_planner_intent_gate.py  test_planner_tool_parse.py  test_report_generator.py  test_sim.py  test_synthetic_resident_reactions.py  test_uploaded_infra_api.py  test_uploaded_infra_upload.py  test_v2.py
ml/: .gitignore  (+7 more)
(+172 files in other folders)
