[project]
name = "wattif-backend"
version = "0.1.0"
description = "WattIf — FastAPI backend: agent-based Toronto renewable-siting digital twin (tick sim + optimizer + hybrid Claude agents)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "websockets>=13",
    "numpy>=2.0",
    "ortools>=9.11",
    "anthropic>=0.40",
    "openai>=1.50",
    "python-dotenv>=1.0",
    "shapely>=2.0",
    # Pinned to 1.7.x to match the version the ml/ artifacts were trained with
    # (avoids sklearn InconsistentVersionWarning / "invalid results" risk on unpickle).
    "scikit-learn>=1.7,<1.8",
    "joblib>=1.3",
    "supabase>=2.10",
    "python-multipart>=0.0.9",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
